// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleDetailGeneral /> should render with [paired=false] 1`] = `
<div>
  <Connect(SampleFileSizeWarning) />
  <Table>
    <tbody>
      <tr>
        <th>
          Host
        </th>
        <td>
          Malus domestica
        </td>
      </tr>
      <tr>
        <th>
          Isolate
        </th>
        <td>
          Isolate Foo
        </td>
      </tr>
      <tr>
        <th>
          Locale
        </th>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </Table>
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Library
      </h2>
      <p>
        Information about the sequencing reads in this sample.
      </p>
    </Box__BoxGroupHeader>
    <Table>
      <tbody>
        <tr>
          <th>
            Encoding
          </th>
          <td>
            Sanger / Illumina 2.1
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            235
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            Normal
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            41 - 76
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            42.3%
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            No
          </td>
        </tr>
      </tbody>
    </Table>
  </Box__BoxGroup>
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Subtraction
      </h2>
      <p>
        This host genome is used for excluding reads from analysis.
      </p>
    </Box__BoxGroupHeader>
    <Table>
      <tbody>
        <tr>
          <th>
            Host
          </th>
          <td>
            <Link
              to="/subtraction/Arabidopsis thaliana"
            >
              Arabidopsis thaliana
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Box__BoxGroup>
  <Connect(EditSample) />
</div>
`;

exports[`<SampleDetailGeneral /> should render with [paired=true] 1`] = `
<div>
  <Connect(SampleFileSizeWarning) />
  <Table>
    <tbody>
      <tr>
        <th>
          Host
        </th>
        <td>
          Malus domestica
        </td>
      </tr>
      <tr>
        <th>
          Isolate
        </th>
        <td>
          Isolate Foo
        </td>
      </tr>
      <tr>
        <th>
          Locale
        </th>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </Table>
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Library
      </h2>
      <p>
        Information about the sequencing reads in this sample.
      </p>
    </Box__BoxGroupHeader>
    <Table>
      <tbody>
        <tr>
          <th>
            Encoding
          </th>
          <td>
            Sanger / Illumina 2.1
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            235
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            Normal
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            41 - 76
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            42.3%
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            Yes
          </td>
        </tr>
      </tbody>
    </Table>
  </Box__BoxGroup>
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Subtraction
      </h2>
      <p>
        This host genome is used for excluding reads from analysis.
      </p>
    </Box__BoxGroupHeader>
    <Table>
      <tbody>
        <tr>
          <th>
            Host
          </th>
          <td>
            <Link
              to="/subtraction/Arabidopsis thaliana"
            >
              Arabidopsis thaliana
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Box__BoxGroup>
  <Connect(EditSample) />
</div>
`;

exports[`<SampleDetailGeneral /> should render with [srna=false] 1`] = `
<div>
  <Connect(SampleFileSizeWarning) />
  <Table>
    <tbody>
      <tr>
        <th>
          Host
        </th>
        <td>
          Malus domestica
        </td>
      </tr>
      <tr>
        <th>
          Isolate
        </th>
        <td>
          Isolate Foo
        </td>
      </tr>
      <tr>
        <th>
          Locale
        </th>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </Table>
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Library
      </h2>
      <p>
        Information about the sequencing reads in this sample.
      </p>
    </Box__BoxGroupHeader>
    <Table>
      <tbody>
        <tr>
          <th>
            Encoding
          </th>
          <td>
            Sanger / Illumina 2.1
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            235
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            Normal
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            41 - 76
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            42.3%
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            No
          </td>
        </tr>
      </tbody>
    </Table>
  </Box__BoxGroup>
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Subtraction
      </h2>
      <p>
        This host genome is used for excluding reads from analysis.
      </p>
    </Box__BoxGroupHeader>
    <Table>
      <tbody>
        <tr>
          <th>
            Host
          </th>
          <td>
            <Link
              to="/subtraction/Arabidopsis thaliana"
            >
              Arabidopsis thaliana
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Box__BoxGroup>
  <Connect(EditSample) />
</div>
`;

exports[`<SampleDetailGeneral /> should render with [srna=true] 1`] = `
<div>
  <Connect(SampleFileSizeWarning) />
  <Table>
    <tbody>
      <tr>
        <th>
          Host
        </th>
        <td>
          Malus domestica
        </td>
      </tr>
      <tr>
        <th>
          Isolate
        </th>
        <td>
          Isolate Foo
        </td>
      </tr>
      <tr>
        <th>
          Locale
        </th>
        <td>
          Bar
        </td>
      </tr>
    </tbody>
  </Table>
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Library
      </h2>
      <p>
        Information about the sequencing reads in this sample.
      </p>
    </Box__BoxGroupHeader>
    <Table>
      <tbody>
        <tr>
          <th>
            Encoding
          </th>
          <td>
            Sanger / Illumina 2.1
          </td>
        </tr>
        <tr>
          <th>
            Read Count
          </th>
          <td>
            235
          </td>
        </tr>
        <tr>
          <th>
            Read Size
          </th>
          <td>
            sRNA
          </td>
        </tr>
        <tr>
          <th>
            Length Range
          </th>
          <td>
            41 - 76
          </td>
        </tr>
        <tr>
          <th>
            GC Content
          </th>
          <td>
            42.3%
          </td>
        </tr>
        <tr>
          <th>
            Paired
          </th>
          <td>
            No
          </td>
        </tr>
      </tbody>
    </Table>
  </Box__BoxGroup>
  <Box__BoxGroup>
    <Box__BoxGroupHeader>
      <h2>
        Subtraction
      </h2>
      <p>
        This host genome is used for excluding reads from analysis.
      </p>
    </Box__BoxGroupHeader>
    <Table>
      <tbody>
        <tr>
          <th>
            Host
          </th>
          <td>
            <Link
              to="/subtraction/Arabidopsis thaliana"
            >
              Arabidopsis thaliana
            </Link>
          </td>
        </tr>
      </tbody>
    </Table>
  </Box__BoxGroup>
  <Connect(EditSample) />
</div>
`;
